# proxy-guard

./: .gitignore  Cargo.toml  README.md  proxy_guard_setup.cmd  proxy_guard_setup.pyw  test-ui.bat  test.bat
legacy/msi/: README.md  build-msi.ps1
packaging/: README.md  build-msi.ps1  build-portable.ps1  dev-install.ps1  dev-uninstall.ps1  portable-readme-zh.txt  portable-readme.txt
packaging/wix/: Product.wxs
proxy_guard_core/: Cargo.toml
proxy_guard_core/src/: lib.rs
proxy_guard_helper/: Cargo.toml
proxy_guard_helper/src/: main.rs
proxy_guard_setup/: Cargo.toml
proxy_guard_setup/src/: main.rs
proxy_guard_setup/ui/: app.slint
