[package]
name = "proxy_guard_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
windows.workspace = true
winreg.workspace = true
